properly parse newlines from the ini file in tooltips. add some newlines in tooltips for better readability.

--- a/pykeylogger.ini
+++ b/pykeylogger.ini
@@ -23,7 +23,7 @@ Hook Mouse Tooltip = Log mouse input. You can set this to False if you are not r
 Hook Mouse = True
 
 # default: Control_L;Control_R;F12
-Control Key Tooltip = Specify the key combo to press to bring up control panel. Separate multiple keys of the combo with semicolon ";". Some good keys to include are [On Windows: "Lmenu", "Rmenu" (left and right Alt keys), "Lcontrol", "Rcontrol", "Lshift", "Rshift"] [On Linux: "Alt_L", "Alt_R" (left and right Alt keys), "Control_L", "Control_R", "Shift_L", "Shift_R", "Super_L", "Super_R" (left and right meta/windows keys)] [On Both: "Escape", "Delete", "Insert", "F1" through "F12", any number of regular alphanumeric keys (can't use the semicolon as one of the keys).] Make it as complex as you want - just make sure you have enough fingers. :)
+Control Key Tooltip = Specify the key combo to press to bring up control panel. Separate multiple keys of the combo with semicolon ";". Some good keys to include are:\n\n On Windows: "Lmenu", "Rmenu" (left and right Alt keys), "Lcontrol", "Rcontrol", "Lshift", "Rshift"\n\n On Linux: "Alt_L", "Alt_R" (left and right Alt keys), "Control_L", "Control_R", "Shift_L", "Shift_R", "Super_L", "Super_R" (left and right meta/windows keys)\n\n On Both: "Escape", "Delete", "Insert", "F1" through "F12", any number of regular alphanumeric keys (can't use the semicolon as one of the keys).\n\nMake it as complex as you want - just make sure you have enough fingers. :)
 Control Key = Control_L;Control_R;F12
 
 # default: None
@@ -77,7 +77,7 @@ Limit Keylog Field Size Tooltip = Limit the size of the keylog field to this num
 Limit Keylog Field Size = 0
 
 # default: [KeyName:%keyname%]
-Non-printing Character Representation Tooltip = How to represent non-printing characters in the log (such as various function and control keys). The string you set here will be printed every time any non-printing key is pressed. The following variables are interpreted: "%keyname%" variable inserts the name of the key pressed, "%scancode%" inserts the scan code, %vkcode% inserts the virtual key code.
+Non-printing Character Representation Tooltip = How to represent non-printing characters in the log (such as various function and control keys). The string you set here will be printed every time any non-printing key is pressed. The following variables are interpreted:\n\n* "%keyname%" variable inserts the name of the key pressed,\n\n*  "%scancode%" inserts the scan code,\n\n* %vkcode% inserts the virtual key code.
 Non-printing Character Representation = [KeyName:%keyname%]
 
 
@@ -247,7 +247,7 @@ Log Subdirectory = click_images
 Log Filename Tooltip = Log all output to the file (filename specified here) inside directory specified with "Log Subdirectory".
 Log Filename = logfile.txt
 
-Click Image Filename Tooltip = Specify filename pattern for the click images. The following variables are interpreted: \n %time% inserts a date/time string of the format "YYYYMMDD_HHMMSS_microsecond". This must be included to assure uniqueness of the filename.\n%processname% inserts the process name that received the click\n%username% inserts the username of the user that generated the click. \nThe file extension is based on the Click Image Format setting.
+Click Image Filename Tooltip = Specify filename pattern for the click images. The following variables are interpreted:\n\n* "%time%" inserts a date/time string of the format "YYYYMMDD_HHMMSS_microsecond". This must be included to assure uniqueness of the filename.\n\n* "%processname%" inserts the process name that received the click.\n\n* "%username%" inserts the username of the user that generated the click.\n\nThe file extension is based on the 'Click Image Format' setting, and should not be specified here.
 Click Image Filename = %time%_%processname%_%username%
 
 # default: 150
