--- a/pykeylogger.ini
+++ b/pykeylogger.ini
@@ -77,7 +77,7 @@ Limit Keylog Field Size Tooltip = Limit the size of the keylog field to this num
 Limit Keylog Field Size = 0
 
 # default: [KeyName:%keyname%]
-Non-printing Character Representation Tooltip = How to represent non-printing characters in the log (such as various function and control keys). The string you set here will be printed every time any non-printing key is pressed. The following variables are interpreted:\n\n* "%keyname%" variable inserts the name of the key pressed,\n\n*  "%scancode%" inserts the scan code,\n\n* %vkcode% inserts the virtual key code.
+Non-printing Character Representation Tooltip = How to represent non-printing characters in the log (such as various function and control keys). The string you set here will be printed every time any non-printing key is pressed. The following variables are interpreted:\n\n* "%keyname%" variable inserts the name of the key pressed,\n\n*  "%scancode%" inserts the scan code,\n\n* "%vkcode%" inserts the virtual key code.
 Non-printing Character Representation = [KeyName:%keyname%]
 
 
