--- a/pykeylogger.ini
+++ b/pykeylogger.ini
@@ -220,9 +220,9 @@ Flush Interval = 120.0
 # Name of class to instantiate to create this thread. Internal use only.
 _Thread_Class = LogRotator
 
-# default: True
+# default: False
 Log Rotation Enable Tooltip = Enable log rotation. Recommended, to avoid unbounded log file growth. Log file will be renamed to a dated filename, and a fresh one will be started, with each rotation event.
-Log Rotation Enable = True
+Log Rotation Enable = False
 
 # default: 4.0
 Log Rotation Interval Tooltip = Specify the time interval between log rotation events, in HOURS.
@@ -370,9 +370,9 @@ Flush Interval = 120.0
 # Name of class to instantiate to create this thread. Internal use only.
 _Thread_Class = LogRotator
 
-# default: True
+# default: False
 Log Rotation Enable Tooltip = Enable log rotation. Recommended, to avoid unbounded log file growth. Log file will be renamed to a dated filename, and a fresh one will be started, with each rotation event.
-Log Rotation Enable = True
+Log Rotation Enable = False
 
 # default: 4.0
 Log Rotation Interval Tooltip = Specify the time interval between log rotation events, in HOURS.
