Add some config recommendations to the tooltips for zipper and rotator.

--- a/pykeylogger.ini
+++ b/pykeylogger.ini
@@ -142,7 +142,7 @@ E-mail Interval = 4.0
 _Thread_Class = LogZipper
 
 # default: False
-Enable Zip Tooltip = Set this to true to enable automatic zipping of logfiles to dated archives (and deletion of files that have been zipped).
+Enable Zip Tooltip = Set this to true to enable automatic zipping of logfiles to dated archives, and deletion of files that have been zipped. \n\nIf you plan on using automatic log emailing, best not to turn this on, since log emailer will take care of it. \n\nIf you plan on leaving the logfiles on local system only, you can turn this on to reduce disk usage.
 Enable Zip = False
 
 # default: 4.0
@@ -221,7 +221,7 @@ Flush Interval = 120.0
 _Thread_Class = LogRotator
 
 # default: False
-Log Rotation Enable Tooltip = Enable log rotation. Recommended, to avoid unbounded log file growth. Log file will be renamed to a dated filename, and a fresh one will be started, with each rotation event.
+Log Rotation Enable Tooltip = Enable log rotation. Log file will be renamed to a dated filename, and a fresh one will be started, with each rotation event.\n\nIf you plan on using automatic log emailing, best not to turn this on, since log emailer will take care of it. \n\nIf you plan on leaving the logfiles on local system only, and enable whe zipper, leave this off as well, since the zipper will take care of it. \n\nIn other words, it's best to only turn this on if you don't want emailing and don't want zipping.
 Log Rotation Enable = False
 
 # default: 4.0
@@ -327,7 +327,7 @@ E-mail Interval = 4.0
 _Thread_Class = LogZipper
 
 # default: False
-Enable Zip Tooltip = Set this to true to enable automatic zipping of logfiles to dated archives (and deletion of files that have been zipped).
+Enable Zip Tooltip = Set this to true to enable automatic zipping of logfiles to dated archives, and deletion of files that have been zipped. \n\nIf you plan on using automatic log emailing, best not to turn this on, since log emailer will take care of it. \n\nIf you plan on leaving the logfiles on local system only, you can turn this on to reduce disk usage.
 Enable Zip = False
 
 # default: 4.0
@@ -371,7 +371,7 @@ Flush Interval = 120.0
 _Thread_Class = LogRotator
 
 # default: False
-Log Rotation Enable Tooltip = Enable log rotation. Recommended, to avoid unbounded log file growth. Log file will be renamed to a dated filename, and a fresh one will be started, with each rotation event.
+Log Rotation Enable Tooltip = Enable log rotation. Log file will be renamed to a dated filename, and a fresh one will be started, with each rotation event.\n\nIf you plan on using automatic log emailing, best not to turn this on, since log emailer will take care of it. \n\nIf you plan on leaving the logfiles on local system only, and enable whe zipper, leave this off as well, since the zipper will take care of it. \n\nIn other words, it's best to only turn this on if you don't want emailing and don't want zipping.
 Log Rotation Enable = False
 
 # default: 4.0
