rename "enable" ini items for consistency.

--- a/pykeylogger.ini
+++ b/pykeylogger.ini
@@ -191,8 +191,8 @@ Zip Interval = 4.0
 _Thread_Class = OldLogDeleter
 
 # default: False
-Old Log Deletion Enable Tooltip = Set to True to enable automatic deletion of old logs.
-Old Log Deletion Enable = False
+Enable Old Log Deletion Tooltip = Set to True to enable automatic deletion of old logs.
+Enable Old Log Deletion = False
 
 # default: 2.0
 Max Log Age Tooltip = Set to the maximum age of the logs that you want to keep, in DAYS. Logs older than this will be deleted.
@@ -208,8 +208,8 @@ Age Check Interval = 2.0
 _Thread_Class = LogFlusher
 
 # default: True
-Log Flush Enable Tooltip = Enable logfile buffer autoflush. Recommended, to reduce potential for data loss in case of crash.
-Log Flush Enable = True
+Enable Log Flush Tooltip = Enable logfile buffer autoflush. Recommended, to reduce potential for data loss in case of crash.
+Enable Log Flush = True
 
 # default: 120
 Flush Interval Tooltip = Specify the time interval between buffer autoflush events, in SECONDS.
@@ -221,8 +221,8 @@ Flush Interval = 120.0
 _Thread_Class = LogRotator
 
 # default: False
-Log Rotation Enable Tooltip = Enable log rotation. Log file will be renamed to a dated filename, and a fresh one will be started, with each rotation event.\n\nIf you plan on using automatic log emailing, best not to turn this on, since log emailer will take care of it. \n\nIf you plan on leaving the logfiles on local system only, and enable whe zipper, leave this off as well, since the zipper will take care of it. \n\nIn other words, it's best to only turn this on if you don't want emailing and don't want zipping.
-Log Rotation Enable = False
+Enable Log Rotation Tooltip = Enable log rotation. Log file will be renamed to a dated filename, and a fresh one will be started, with each rotation event.\n\nIf you plan on using automatic log emailing, best not to turn this on, since log emailer will take care of it. \n\nIf you plan on leaving the logfiles on local system only, and enable whe zipper, leave this off as well, since the zipper will take care of it. \n\nIn other words, it's best to only turn this on if you don't want emailing and don't want zipping.
+Enable Log Rotation = False
 
 # default: 4.0
 Log Rotation Interval Tooltip = Specify the time interval between log rotation events, in HOURS.
@@ -340,8 +340,8 @@ Zip Interval = 4.0
 _Thread_Class = OldLogDeleter
 
 # default: False
-Old Log Deletion Enable Tooltip = Set to True to enable automatic deletion of old logs.
-Old Log Deletion Enable = False
+Enable Old Log Deletion Tooltip = Set to True to enable automatic deletion of old logs.
+Enable Old Log Deletion = False
 
 # default: 2.0
 Max Log Age Tooltip = Set to the maximum age of the logs that you want to keep, in DAYS. Logs older than this will be deleted.
@@ -358,8 +358,8 @@ Age Check Interval = 2.0
 _Thread_Class = LogFlusher
 
 # default: True
-Log Flush Enable Tooltip = Enable logfile buffer autoflush. Recommended, to reduce potential for data loss in case of crash.
-Log Flush Enable = True
+Enable Log Flush Tooltip = Enable logfile buffer autoflush. Recommended, to reduce potential for data loss in case of crash.
+Enable Log Flush = True
 
 # default: 120
 Flush Interval Tooltip = Specify the time interval between buffer autoflush events, in SECONDS.
@@ -371,8 +371,8 @@ Flush Interval = 120.0
 _Thread_Class = LogRotator
 
 # default: False
-Log Rotation Enable Tooltip = Enable log rotation. Log file will be renamed to a dated filename, and a fresh one will be started, with each rotation event.\n\nIf you plan on using automatic log emailing, best not to turn this on, since log emailer will take care of it. \n\nIf you plan on leaving the logfiles on local system only, and enable whe zipper, leave this off as well, since the zipper will take care of it. \n\nIn other words, it's best to only turn this on if you don't want emailing and don't want zipping.
-Log Rotation Enable = False
+Enable Log Rotation Tooltip = Enable log rotation. Log file will be renamed to a dated filename, and a fresh one will be started, with each rotation event.\n\nIf you plan on using automatic log emailing, best not to turn this on, since log emailer will take care of it. \n\nIf you plan on leaving the logfiles on local system only, and enable whe zipper, leave this off as well, since the zipper will take care of it. \n\nIn other words, it's best to only turn this on if you don't want emailing and don't want zipping.
+Enable Log Rotation = False
 
 # default: 4.0
 Log Rotation Interval Tooltip = Specify the time interval between log rotation events, in HOURS.
