update tooltip for screenshotter enable

--- a/pykeylogger.ini
+++ b/pykeylogger.ini
@@ -428,7 +428,7 @@ Log Rotation Interval = 4.0
 _Thread_Class = TimedScreenshotFirstStage
 
 # default: True
-Enable Timed Screenshot Capture Tooltip = Enable the capture of a partial screenshot at every mouse click. This functionality grabs an area around the mouse pointer with every click (area size defined with the width and height settings in this panel).
+Enable Timed Screenshot Capture Tooltip = Enable the capture of a full screenshot at specified time intervals. The screenshot is only taken if there's user activity detected since last screenshot. Key presses and mouse clicks count as user activity, mouse motion does not.
 Enable Timed Screenshot Capture = True
 
 # default: detailedlog
